stateDiagram-v2
    [*] --> MISSING : App starts

    MISSING --> REFRESHING : User exists, need token
    MISSING --> PRESENT : No user (guest mode)

    REFRESHING --> PRESENT : syncTokenWithBackend success
    REFRESHING --> MISSING : Request aborted (safe restore)
    REFRESHING --> ERROR : API error or 8s timeout

    note right of REFRESHING
        P0 FIX: 8s terminal timeout
        ensures REFRESHING never hangs forever
    end note

    PRESENT --> REFRESHING : 401 or token expired event
    PRESENT --> MISSING : User logs out

    ERROR --> REFRESHING : retryTokenSync (manual)
    ERROR --> MISSING : User logs out

    note right of ERROR
        ERROR = guest mode:
        - user = null
        - auth headers cleared
        - no automatic retry
    end note
